--- a/css/styles.css
+++ b/css/styles.css
@@ -2,10 +2,8 @@ body,
 h1 {
   margin: 0;
 }
-h1,
 h2 {
   text-transform: uppercase;
-  font-weight: 700;
 }
 h1,
 h2,
@@ -17,102 +15,65 @@ body {
   background: #fdfdfd;
   color: #1c1c1c;
 }
-.container {
-  display: flex;
-  flex-direction: column;
-  max-width: 100%;
-  margin: 0 auto;
+li,
+p {
+  font-size: 0.95em;
+  line-height: 1.6;
 }
-.main,
-.sidebar {
-  width: 100%;
-  padding: 20px;
-}
-.sidebar {
-  background-color: #e9d7f1;
-}
-.main {
-  padding-top: 10px;
+ul {
+  padding-left: 20px;
 }
 h1 {
-  font-size: 2em;
-  line-height: 1.2;
-}
-.highlight-bg,
-h2 {
-  margin-bottom: 10px;
+  font-size: 2.5em;
 }
 h1 .highlight {
   display: block;
   font-weight: 500;
-  font-size: 1.2em;
+  font-size: 1.5em;
 }
 h2 {
-  font-size: 1.1em;
+  font-size: 1.2em;
+  margin-bottom: 10px;
 }
 h3 {
   margin-top: 20px;
   font-size: 1em;
 }
-li,
-p {
-  font-size: 0.9em;
-  line-height: 1.4;
-  margin: 0 0 0.5em;
+.container {
+  display: flex;
+  max-width: 1000px;
+  margin: 0 auto;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-ul {
-  padding-left: 20px;
-  margin: 0 0 1em;
+.sidebar {
+  background-color: #e9d7f1;
+  color: #000;
+  padding: 20px;
+  width: 35%;
 }
-.small {
-  font-size: 0.85em;
-  color: #333;
-}
-.blue {
-  color: #6495ed;
-  font-style: italic;
+.main {
+  padding: 40px;
+  width: 65%;
 }
 .highlight-bg {
   background-color: #d1a1e3;
   padding: 5px 10px;
   display: inline-block;
+  margin-bottom: 10px;
 }
+.intro,
 .section {
   margin-bottom: 30px;
 }
-@media (min-width: 768px) {
-  .container {
-    flex-direction: row;
-    max-width: 1000px;
-  }
-  .sidebar {
-    width: 35%;
-    padding: 20px;
-  }
-  .main {
-    width: 65%;
-    padding: 40px;
-  }
-  h1 {
-    font-size: 2.5em;
-  }
-  h1 .highlight {
-    font-size: 1.5em;
-  }
-  h2 {
-    font-size: 1.2em;
-  }
-  li,
-  p {
-    font-size: 0.95em;
-    line-height: 1.6;
-  }
+.small {
+  font-size: 0.9em;
+  color: #333;
 }
-@media (min-width: 1200px) {
-  .container {
-    padding: 0 20px;
-  }
-  .main {
-    padding: 60px;
-  }
+.blue {
+  color: #1f53b4;
+  font-style: italic;
+}
+.expirience,
+.interesets {
+  margin-left: 5px;
 }
