--- a/css/styles.css
+++ b/css/styles.css
@@ -71,9 +71,7 @@ ul {
     flex-direction: column;
     max-width: 600px;
     margin: 0 auto;
-    box-shadow: 0 0 8px rgba(0,0,0,.1);
     background: #fff;
-    overflow: hidden
 }
 
 .main, .sidebar {
@@ -104,4 +102,14 @@ ul {
         width: 65%;
         padding: 40px
     }
+}
+@media print {
+    .container {
+        flex-direction: row !important;
+        max-width: none !important;
+    }
+
+    body, .sidebar, .main {
+        padding: 0 !important
+    } 
 }
