--- a/css/styles.css
+++ b/css/styles.css
@@ -75,8 +75,13 @@ ul {
   width: 100%;
   padding: 20px;
 }
+.main {
+  background-color: #f3e8ff;
+  order: 1;
+}
 .sidebar {
   background-color: #e9d7f1;
+  order: 2;
 }
 .section {
   margin-bottom: 25px;
