--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+.container,
+.main,
+.sidebar {
+  flex-direction: column;
+  display: flex;
+}
 h1,
 h2,
 h3 {
@@ -65,16 +71,12 @@ ul {
   font-style: italic;
 }
 .container {
-  display: flex;
-  flex-direction: column;
   max-width: 600px;
   margin: 0 auto;
   background: #fff;
 }
 .main,
 .sidebar {
-  display: flex;
-  flex-direction: column;
   width: 100%;
   padding: 20px;
 }
@@ -99,22 +101,16 @@ ul {
 .section {
   margin-bottom: 25px;
 }
+.intro,
 .section.competences {
   order: 1;
 }
+.experience,
 .section.formation {
   order: 2;
 }
+.interests,
 .section.contact {
-  order: 3;
-}
-.intro {
-  order: 1;
-}
-.experience {
-  order: 2;
-}
-.interests {
   order: 3;
 }
 @media (min-width: 768px) {
@@ -130,6 +126,10 @@ ul {
     width: 65%;
     padding: 40px;
   }
+  .main header h1,
+  .main header h2 {
+    text-align: left;
+  }
 }
 @media print {
   .container {
@@ -140,5 +140,14 @@ ul {
   .sidebar,
   body {
     padding: 0 !important;
+  }
+  .main header {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+  }
+  .main header h1,
+  .main header h2 {
+    text-align: left;
   }
 }
