--- a/css/styles.css
+++ b/css/styles.css
@@ -153,7 +153,9 @@ header h2 {
   margin-bottom: 5px;
   transition: transform 0.3s;
 }
-
+.navbar li a[href="#interests"] img {
+  margin-left: -8px;
+}
 .navbar li a:hover {
   color: #007acc;
 }
