--- a/css/styles.css
+++ b/css/styles.css
@@ -153,6 +153,9 @@ header h2 {
   margin-bottom: 5px;
   transition: transform 0.3s;
 }
+.navbar li a[href="#interests"] img {
+  margin-left: -68px;
+}
 .navbar li a:hover {
   color: #007acc;
 }
@@ -295,6 +298,7 @@ footer {
   }
   .navbar ul {
     display: flex;
+    flex-wrap: nowrap;
     justify-content: flex-end;
     gap: 30px;
   }
