--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  pointer-events: none;
   z-index: 1;
+  pointer-events: none;
 }
 header,
 main {
@@ -39,15 +39,14 @@ header {
 body {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.6;
-  color: #333;
-  background-color: #fafafa;
   overflow-x: hidden;
+  background-color: #fafafa;
+  color: #333;
 }
 a {
   color: inherit;
   text-decoration: none;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding: 0 5px;
 }
 a:hover {
   text-decoration: underline;
@@ -61,8 +60,8 @@ main {
   border-radius: 8px;
   margin: 30px 0;
   padding: 20px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   z-index: 2;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
 .interests-list,
 .skills-list {
@@ -73,17 +72,17 @@ main {
 .section-title {
   font-size: 1.8rem;
   margin-bottom: 15px;
-  color: #007acc;
   text-align: center;
   position: relative;
+  color: #007acc;
 }
 .section-title::after {
   content: "";
   display: block;
-  background-color: #007acc;
   width: 60px;
   height: 3px;
   margin: 8px auto 0;
+  background-color: #007acc;
 }
 .section-text {
   font-size: 1rem;
@@ -210,6 +209,7 @@ header h2 {
 .highlight-bg {
   background: linear-gradient(90deg, #007acc 0, #00bfff 100%);
   background-clip: text;
+  -webkit-background-clip: text; /* for chrome/safari */
   color: transparent;
 }
 #contact .section-text {
